# Real_Time_Rendering

./: .gitignore  LICENSE  README.md
RealTimeRendering/: CMakeLists.txt  Camera.c  Graphics.c  Material.h  Matrix.c  Mesh.c  Mesh.h  Object.c  RealTimeRendering.vcxproj  RealTimeRendering.vcxproj.filters  Renderer.c  Settings.h  Shader.c  Shader.h  Vector.c  Vector.h  main.c
RealTimeRendering/x64/Debug/: RealTimeRendering.exe.recipe  RealTimeRendering.ilk  vc143.idb
RealTimeRendering/x64/Debug/RealTime.d54c3bfb.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RealTimeRendering.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
RealTimeRendering/x64/Release/: Camera.nativecodeanalysis.sarif  Graphics.nativecodeanalysis.sarif  Material.nativecodeanalysis.sarif  Matrix.nativecodeanalysis.sarif  Mesh.nativecodeanalysis.sarif  Object.nativecodeanalysis.sarif  RealTimeRendering.iobj  RealTimeRendering.ipdb  RealTimeRendering.vcxproj.FileListAbsolute.txt  Renderer.nativecodeanalysis.sarif  Scene.nativecodeanalysis.sarif  Settings.nativecodeanalysis.sarif  Shader.nativecodeanalysis.sarif  Timer.nativecodeanalysis.sarif  Tools.nativecodeanalysis.sarif  Vector.nativecodeanalysis.sarif  Window.nativecodeanalysis.sarif  main.nativecodeanalysis.sarif
RealTimeRendering/x64/Release/RealTime.d54c3bfb.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  RealTimeRendering.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
RealTimeRendering_Basecode/RealTimeRendering/: Graphics.c  Material.c  Matrix.c  main.c  (+8 more)
(+5 files in other folders)
